fix: PickerView mask leaks a small gap

--- a/src/components/picker-view/picker-view.less
+++ b/src/components/picker-view/picker-view.less
@@ -57,10 +57,10 @@
   position: absolute;
   left: 0;
   width: 100%;
-  height: calc(50% - 17px);
+  height: calc(50% - 12px);
   pointer-events: none;
   &-top {
-    top: 0;
+    top: -5px;
     border-bottom: solid 1px var(--adm-border-color);
     background: linear-gradient(
       0deg,
@@ -69,7 +69,7 @@
     );
   }
   &-bottom {
-    bottom: 0;
+    bottom: -5px;
     border-top: solid 1px var(--adm-border-color);
     background: linear-gradient(
       180deg,
